--- a/examples/docusaurus/mistral/docs/api/tag/fine-tuning/jobs.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/fine-tuning/jobs.mdx
@@ -4,16 +4,24 @@ sidebar_label: Fine Tuning Jobs
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, TryItNow, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationTryItNowSection, TryItNow, Section, SectionTitle, SectionContent, OperationResponseBodySection, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationRequestBodySection, FrontMatterDisplayType, OperationParametersSection } from "@speakeasy-api/docs-md/react";
 
 
 # Fine Tuning Jobs Operations \{#fine-tuning/jobs\}
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/fine\_tuning/jobs \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs\}
 
 _Get Fine Tuning Jobs_
 
 Get a list of fine-tuning jobs for your organization and user.
+
+</OperationFrontMatterSection>
+
+<OperationTryItNowSection slot="try-it-now">
 
 <Section variant="top-level">
 
@@ -46,6 +54,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1764,11 +1776,23 @@ _Default Value:_ `"list"`
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/fine\_tuning/jobs \{#operation-jobs_api_routes_fine_tuning_create_fine_tuning_job\}
 
 _Create Fine Tuning Job_
 
 Create a new fine-tuning job, it will be queued for processing.
+
+</OperationFrontMatterSection>
+
+<OperationTryItNowSection slot="try-it-now">
 
 <Section variant="top-level">
 
@@ -1806,6 +1830,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationRequestBodySection slot="request-body">
 
 <Section variant="top-level">
 
@@ -2732,6 +2760,10 @@ _Default Value:_ `1`
 </SectionContent>
 
 </Section>
+
+</OperationRequestBodySection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -4721,11 +4753,23 @@ _Example:_
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/fine\_tuning/jobs/\{job\_id\} \{#operation-jobs_api_routes_fine_tuning_get_fine_tuning_job\}
 
 _Get Fine Tuning Job_
 
 Get a fine-tuned job details by its UUID.
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -4769,6 +4813,10 @@ The ID of the job to analyse.
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -4802,6 +4850,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -7063,11 +7115,23 @@ _Default Value:_ `"job"`
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/fine\_tuning/jobs/\{job\_id\}/cancel \{#operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job\}
 
 _Cancel Fine Tuning Job_
 
 Request the cancellation of a fine tuning job.
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -7111,6 +7175,10 @@ The ID of the job to cancel.
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -7144,6 +7212,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -9405,11 +9477,23 @@ _Default Value:_ `"job"`
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/fine\_tuning/jobs/\{job\_id\}/start \{#operation-jobs_api_routes_fine_tuning_start_fine_tuning_job\}
 
 _Start Fine Tuning Job_
 
 Request the start of a validated fine tuning job.
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -9447,6 +9531,10 @@ Request the start of a validated fine tuning job.
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -9480,6 +9568,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -11740,3 +11832,7 @@ _Default Value:_ `"job"`
 </SectionContent>
 
 </TabbedSection>
+
+</OperationResponseBodySection>
+
+</Operation>
