--- a/examples/nextra/mistral/src/app/api/tag/beta/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/beta/agents/page.mdx
@@ -3,16 +3,24 @@ sidebarTitle: Beta Agents
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, TryItNow, TabbedSection, SectionTab, FrontMatterDisplayType, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationParametersSection, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, OperationTryItNowSection, TryItNow, OperationResponseBodySection, TabbedSection, SectionTab, FrontMatterDisplayType, ExpandableBreakout, OperationRequestBodySection } from "@speakeasy-api/docs-md/react";
 
 
 # Beta Agents Operations [#beta/agents]
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/agents [#operation-agents_api_v1_agents_list]
 
 _List agent entities._
 
 Retrieve a list of agent entities sorted by creation time.
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -68,6 +76,10 @@ Retrieve a list of agent entities sorted by creation time.
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -99,6 +111,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1316,11 +1332,23 @@ Raw HTTP response; suitable for custom response parsing
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/agents [#operation-agents_api_v1_agents_create]
 
 _Create a agent that can be used within a conversation._
 
 Create a new agent giving it instructions, tools, description. The agent is then available to be used as a regular assistant in a conversation or as part of an agent pool from which it can be used.
+
+</OperationFrontMatterSection>
+
+<OperationTryItNowSection slot="try-it-now">
 
 <Section variant="top-level">
 
@@ -1356,6 +1384,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationRequestBodySection slot="request-body">
 
 <Section variant="top-level">
 
@@ -2263,6 +2295,10 @@ _Default Value:_ `"document_library"`
 </SectionContent>
 
 </Section>
+
+</OperationRequestBodySection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -3448,11 +3484,23 @@ Raw HTTP response; suitable for custom response parsing
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/agents/\{agent\_id\} [#operation-agents_api_v1_agents_get]
 
 _Retrieve an agent entity._
 
 Given an agent retrieve an agent entity with its attributes.
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -3490,6 +3538,10 @@ Given an agent retrieve an agent entity with its attributes.
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -3523,6 +3575,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -4708,11 +4764,23 @@ Raw HTTP response; suitable for custom response parsing
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>PATCH</b></Pill> /v1/agents/\{agent\_id\} [#operation-agents_api_v1_agents_update]
 
 _Update an agent entity._
 
 Update an agent attributes and create a new version.
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -4750,6 +4818,10 @@ Update an agent attributes and create a new version.
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -4784,6 +4856,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationRequestBodySection slot="request-body">
 
 <Section variant="top-level">
 
@@ -5689,6 +5765,10 @@ _Default Value:_ `"document_library"`
 </SectionContent>
 
 </Section>
+
+</OperationRequestBodySection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -6874,11 +6954,23 @@ Raw HTTP response; suitable for custom response parsing
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>PATCH</b></Pill> /v1/agents/\{agent\_id\}/version [#operation-agents_api_v1_agents_update_version]
 
 _Update an agent version._
 
 Switch the version of an agent.
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -6934,6 +7026,10 @@ Switch the version of an agent.
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -6968,6 +7064,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -8152,3 +8252,7 @@ Raw HTTP response; suitable for custom response parsing
 </SectionContent>
 
 </TabbedSection>
+
+</OperationResponseBodySection>
+
+</Operation>
