--- a/examples/nextra/pokeapi/src/app/api/tag/items/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/tag/items/page.mdx
@@ -3,16 +3,24 @@ sidebarTitle: Items
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationSecuritySection, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, OperationParametersSection, OperationResponseBodySection, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
 
 
 # Items Operations [#items]
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/item/ [#operation-api_v2_item_list]
 
 _List items_
 
 An item is an object in the games which the player can pick up, keep in their bag, and use in some manner. They have various uses, including healing, powering up, helping catch Pokémon, or to access a new area.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -65,6 +73,10 @@ An item is an object in the games which the player can pick up, keep in their ba
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -156,6 +168,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -333,11 +349,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/item/\{id\}/ [#operation-api_v2_item_retrieve]
 
 _Get item_
 
 An item is an object in the games which the player can pick up, keep in their bag, and use in some manner. They have various uses, including healing, powering up, helping catch Pokémon, or to access a new area.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -391,6 +419,10 @@ An item is an object in the games which the player can pick up, keep in their ba
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -432,6 +464,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1583,11 +1619,23 @@ https://pokeapi.co/api/v2/item-attribute/1/
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/item-category/ [#operation-api_v2_item_category_list]
 
 _List item categories_
 
 Item categories determine where items will be placed in the players bag.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -1640,6 +1688,10 @@ Item categories determine where items will be placed in the players bag.
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -1731,6 +1783,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1908,11 +1964,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/item-category/\{id\}/ [#operation-api_v2_item_category_retrieve]
 
 _Get item category_
 
 Item categories determine where items will be placed in the players bag.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -1966,6 +2034,10 @@ Item categories determine where items will be placed in the players bag.
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -2007,6 +2079,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -2306,11 +2382,23 @@ This parameter can be a string or an integer.
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/item-attribute/ [#operation-api_v2_item_attribute_list]
 
 _List item attributes_
 
 Item attributes define particular aspects of items, e.g."usable in battle" or "consumable".
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -2363,6 +2451,10 @@ Item attributes define particular aspects of items, e.g."usable in battle" or "c
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -2454,6 +2546,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -2631,11 +2727,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/item-attribute/\{id\}/ [#operation-api_v2_item_attribute_retrieve]
 
 _Get item attribute_
 
 Item attributes define particular aspects of items, e.g."usable in battle" or "consumable".
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -2689,6 +2797,10 @@ Item attributes define particular aspects of items, e.g."usable in battle" or "c
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -2730,6 +2842,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -3102,11 +3218,23 @@ https://pokeapi.co/api/v2/item/1/
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/item-fling-effect/ [#operation-api_v2_item_fling_effect_list]
 
 _List item fling effects_
 
 The various effects of the move"Fling" when used with different items.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -3159,6 +3287,10 @@ The various effects of the move"Fling" when used with different items.
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -3250,6 +3382,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -3427,11 +3563,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/item-fling-effect/\{id\}/ [#operation-api_v2_item_fling_effect_retrieve]
 
 _Get item fling effect_
 
 The various effects of the move"Fling" when used with different items.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -3485,6 +3633,10 @@ The various effects of the move"Fling" when used with different items.
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -3526,6 +3678,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -3769,11 +3925,23 @@ This parameter can be a string or an integer.
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/item-pocket/ [#operation-api_v2_item_pocket_list]
 
 _List item pockets_
 
 Pockets within the players bag used for storing items by category.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -3826,6 +3994,10 @@ Pockets within the players bag used for storing items by category.
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -3917,6 +4089,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -4094,11 +4270,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/item-pocket/\{id\}/ [#operation-api_v2_item_pocket_retrieve]
 
 _Get item pocket_
 
 Pockets within the players bag used for storing items by category.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -4152,6 +4340,10 @@ Pockets within the players bag used for storing items by category.
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -4193,6 +4385,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -4435,3 +4631,7 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </TabbedSection>
+
+</OperationResponseBodySection>
+
+</Operation>
