--- a/examples/nextra/pokeapi/src/app/api/tag/pokemon/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/tag/pokemon/page.mdx
@@ -3,14 +3,22 @@ sidebarTitle: Pokemon
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationSecuritySection, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, OperationParametersSection, OperationResponseBodySection, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
 
 
 # Pokemon Operations [#pokemon]
 
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/ability/ [#operation-api_v2_ability_list]
 
 Abilities provide passive effects for Pokémon in battle or in the overworld. Pokémon have multiple possible abilities but can have only one ability at a time. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Ability) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -63,6 +71,10 @@ Abilities provide passive effects for Pokémon in battle or in the overworld. Po
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -154,6 +166,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -331,9 +347,21 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/ability/\{id\}/ [#operation-api_v2_ability_retrieve]
 
 Abilities provide passive effects for Pokémon in battle or in the overworld. Pokémon have multiple possible abilities but can have only one ability at a time. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Ability) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -387,6 +415,10 @@ Abilities provide passive effects for Pokémon in battle or in the overworld. Po
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -428,6 +460,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1188,11 +1224,23 @@ This parameter can be a string or an integer.
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/characteristic/ [#operation-api_v2_characteristic_list]
 
 _List charecterictics_
 
 Characteristics indicate which stat contains a Pokémon's highest IV. A Pokémon's Characteristic is determined by the remainder of its highest IV divided by 5 (gene_modulo). Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Characteristic) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -1245,6 +1293,10 @@ Characteristics indicate which stat contains a Pokémon's highest IV. A Pokémon
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -1336,6 +1388,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1494,11 +1550,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/characteristic/\{id\}/ [#operation-api_v2_characteristic_retrieve]
 
 _Get characteristic_
 
 Characteristics indicate which stat contains a Pokémon's highest IV. A Pokémon's Characteristic is determined by the remainder of its highest IV divided by 5 (gene_modulo). Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Characteristic) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -1552,6 +1620,10 @@ Characteristics indicate which stat contains a Pokémon's highest IV. A Pokémon
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -1593,6 +1665,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1837,11 +1913,23 @@ This parameter can be a string or an integer.
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/egg-group/ [#operation-api_v2_egg_group_list]
 
 _List egg groups_
 
 Egg Groups are categories which determine which Pokémon are able to interbreed. Pokémon may belong to either one or two Egg Groups. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Egg_Group) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -1894,6 +1982,10 @@ Egg Groups are categories which determine which Pokémon are able to interbreed.
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -1985,6 +2077,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -2162,11 +2258,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/egg-group/\{id\}/ [#operation-api_v2_egg_group_retrieve]
 
 _Get egg group_
 
 Egg Groups are categories which determine which Pokémon are able to interbreed. Pokémon may belong to either one or two Egg Groups. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Egg_Group) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -2220,6 +2328,10 @@ Egg Groups are categories which determine which Pokémon are able to interbreed.
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -2261,6 +2373,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -2526,11 +2642,23 @@ https://pokeapi.co/api/v2/pokemon-species/1/
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/gender/ [#operation-api_v2_gender_list]
 
 _List genders_
 
 Genders were introduced in Generation II for the purposes of breeding Pokémon but can also result in visual differences or even different evolutionary lines. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Gender) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -2583,6 +2711,10 @@ Genders were introduced in Generation II for the purposes of breeding Pokémon b
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -2674,6 +2806,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -2851,11 +2987,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/gender/\{id\}/ [#operation-api_v2_gender_retrieve]
 
 _Get gender_
 
 Genders were introduced in Generation II for the purposes of breeding Pokémon but can also result in visual differences or even different evolutionary lines. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Gender) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -2909,6 +3057,10 @@ Genders were introduced in Generation II for the purposes of breeding Pokémon b
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -2950,6 +3102,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -3291,11 +3447,23 @@ _Example:_
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/growth-rate/ [#operation-api_v2_growth_rate_list]
 
 _List growth rates_
 
 Growth rates are the speed with which Pokémon gain levels through experience. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Experience) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -3348,6 +3516,10 @@ Growth rates are the speed with which Pokémon gain levels through experience. C
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -3439,6 +3611,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -3616,11 +3792,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/growth-rate/\{id\}/ [#operation-api_v2_growth_rate_retrieve]
 
 _Get growth rate_
 
 Growth rates are the speed with which Pokémon gain levels through experience. Check out [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Experience) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -3674,6 +3862,10 @@ Growth rates are the speed with which Pokémon gain levels through experience. C
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -3715,6 +3907,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -4047,11 +4243,23 @@ This parameter can be a string or an integer.
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/move-damage-class/ [#operation-api_v2_move_damage_class_list]
 
 _List move damage classes_
 
 Damage classes moves can have, e.g. physical, special, or non-damaging.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -4104,6 +4312,10 @@ Damage classes moves can have, e.g. physical, special, or non-damaging.
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -4195,6 +4407,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -4372,11 +4588,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/move-damage-class/\{id\}/ [#operation-api_v2_move_damage_class_retrieve]
 
 _Get move damage class_
 
 Damage classes moves can have, e.g. physical, special, or non-damaging.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -4430,6 +4658,10 @@ Damage classes moves can have, e.g. physical, special, or non-damaging.
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -4471,6 +4703,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -4823,11 +5059,23 @@ This parameter can be a string or an integer.
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/nature/ [#operation-api_v2_nature_list]
 
 _List natures_
 
 Natures influence how a Pokémon's stats grow. See [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Nature) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -4880,6 +5128,10 @@ Natures influence how a Pokémon's stats grow. See [Bulbapedia](http://bulbapedi
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -4971,6 +5223,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -5148,11 +5404,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/nature/\{id\}/ [#operation-api_v2_nature_retrieve]
 
 _Get nature_
 
 Natures influence how a Pokémon's stats grow. See [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Nature) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -5206,6 +5474,10 @@ Natures influence how a Pokémon's stats grow. See [Bulbapedia](http://bulbapedi
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -5247,6 +5519,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -5983,11 +6259,23 @@ https://pokeapi.co/api/v2/pokeathlon-stat/2/
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokemon/ [#operation-api_v2_pokemon_list]
 
 _List pokemon_
 
 Pokémon are the creatures that inhabit the world of the Pokémon games. They can be caught using Pokéballs and trained by battling with other Pokémon. Each Pokémon belongs to a specific species but may take on a variant which makes it differ from other Pokémon of the same species, such as base stats, available abilities and typings. See [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Pok%C3%A9mon_(species)) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -6040,6 +6328,10 @@ Pokémon are the creatures that inhabit the world of the Pokémon games. They ca
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -6131,6 +6423,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -6308,11 +6604,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokemon/\{id\}/ [#operation-api_v2_pokemon_retrieve]
 
 _Get pokemon_
 
 Pokémon are the creatures that inhabit the world of the Pokémon games. They can be caught using Pokéballs and trained by battling with other Pokémon. Each Pokémon belongs to a specific species but may take on a variant which makes it differ from other Pokémon of the same species, such as base stats, available abilities and typings. See [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Pok%C3%A9mon_(species)) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -6366,6 +6674,10 @@ Pokémon are the creatures that inhabit the world of the Pokémon games. They ca
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -6407,6 +6719,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -7726,11 +8042,23 @@ _Example:_
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokemon-color/ [#operation-api_v2_pokemon_color_list]
 
 _List pokemon colors_
 
 Colors used for sorting Pokémon in a Pokédex. The color listed in the Pokédex is usually the color most apparent or covering each Pokémon's body. No orange category exists; Pokémon that are primarily orange are listed as red or brown.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -7783,6 +8111,10 @@ Colors used for sorting Pokémon in a Pokédex. The color listed in the Pokédex
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -7874,6 +8206,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -8051,11 +8387,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokemon-color/\{id\}/ [#operation-api_v2_pokemon_color_retrieve]
 
 _Get pokemon color_
 
 Colors used for sorting Pokémon in a Pokédex. The color listed in the Pokédex is usually the color most apparent or covering each Pokémon's body. No orange category exists; Pokémon that are primarily orange are listed as red or brown.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -8109,6 +8457,10 @@ Colors used for sorting Pokémon in a Pokédex. The color listed in the Pokédex
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -8150,6 +8502,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -8393,11 +8749,23 @@ This parameter can be a string or an integer.
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokemon-form/ [#operation-api_v2_pokemon_form_list]
 
 _List pokemon forms_
 
 Some Pokémon may appear in one of multiple, visually different forms. These differences are purely cosmetic. For variations within a Pokémon species, which do differ in more than just visuals, the 'Pokémon' entity is used to represent such a variety.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -8450,6 +8818,10 @@ Some Pokémon may appear in one of multiple, visually different forms. These dif
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -8541,6 +8913,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -8718,11 +9094,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokemon-form/\{id\}/ [#operation-api_v2_pokemon_form_retrieve]
 
 _Get pokemon form_
 
 Some Pokémon may appear in one of multiple, visually different forms. These differences are purely cosmetic. For variations within a Pokémon species, which do differ in more than just visuals, the 'Pokémon' entity is used to represent such a variety.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -8776,6 +9164,10 @@ Some Pokémon may appear in one of multiple, visually different forms. These dif
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -8817,6 +9209,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -9397,11 +9793,23 @@ https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/41
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokemon-habitat/ [#operation-api_v2_pokemon_habitat_list]
 
 _List pokemom habitas_
 
 Habitats are generally different terrain Pokémon can be found in but can also be areas designated for rare or legendary Pokémon.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -9454,6 +9862,10 @@ Habitats are generally different terrain Pokémon can be found in but can also b
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -9545,6 +9957,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -9722,11 +10138,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokemon-habitat/\{id\}/ [#operation-api_v2_pokemon_habitat_retrieve]
 
 _Get pokemom habita_
 
 Habitats are generally different terrain Pokémon can be found in but can also be areas designated for rare or legendary Pokémon.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -9780,6 +10208,10 @@ Habitats are generally different terrain Pokémon can be found in but can also b
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -9821,6 +10253,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -10064,11 +10500,23 @@ This parameter can be a string or an integer.
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokemon-shape/ [#operation-api_v2_pokemon_shape_list]
 
 _List pokemon shapes_
 
 Shapes used for sorting Pokémon in a Pokédex.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -10121,6 +10569,10 @@ Shapes used for sorting Pokémon in a Pokédex.
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -10212,6 +10664,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -10389,11 +10845,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokemon-shape/\{id\}/ [#operation-api_v2_pokemon_shape_retrieve]
 
 _Get pokemon shape_
 
 Shapes used for sorting Pokémon in a Pokédex.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -10447,6 +10915,10 @@ Shapes used for sorting Pokémon in a Pokédex.
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -10488,6 +10960,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -10843,11 +11319,23 @@ https://pokeapi.co/api/v2/language/9/
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokemon-species/ [#operation-api_v2_pokemon_species_list]
 
 _List pokemon species_
 
 A Pokémon Species forms the basis for at least one Pokémon. Attributes of a Pokémon species are shared across all varieties of Pokémon within the species. A good example is Wormadam; Wormadam is the species which can be found in three different varieties, Wormadam-Trash, Wormadam-Sandy and Wormadam-Plant.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -10900,6 +11388,10 @@ A Pokémon Species forms the basis for at least one Pokémon. Attributes of a Po
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -10991,6 +11483,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -11168,11 +11664,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokemon-species/\{id\}/ [#operation-api_v2_pokemon_species_retrieve]
 
 _Get pokemon species_
 
 A Pokémon Species forms the basis for at least one Pokémon. Attributes of a Pokémon species are shared across all varieties of Pokémon within the species. A good example is Wormadam; Wormadam is the species which can be found in three different varieties, Wormadam-Trash, Wormadam-Sandy and Wormadam-Plant.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -11226,6 +11734,10 @@ A Pokémon Species forms the basis for at least one Pokémon. Attributes of a Po
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -11267,6 +11779,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -12717,11 +13233,23 @@ https://pokeapi.co/api/v2/egg-group/1/
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokeathlon-stat/ [#operation-api_v2_pokeathlon_stat_list]
 
 _List pokeathlon stats_
 
 Pokeathlon Stats are different attributes of a Pokémon's performance in Pokéathlons. In Pokéathlons, competitions happen on different courses; one for each of the different Pokéathlon stats. See [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Pok%C3%A9athlon) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -12774,6 +13302,10 @@ Pokeathlon Stats are different attributes of a Pokémon's performance in Pokéat
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -12865,6 +13397,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -13042,11 +13578,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pokeathlon-stat/\{id\}/ [#operation-api_v2_pokeathlon_stat_retrieve]
 
 _Get pokeathlon stat_
 
 Pokeathlon Stats are different attributes of a Pokémon's performance in Pokéathlons. In Pokéathlons, competitions happen on different courses; one for each of the different Pokéathlon stats. See [Bulbapedia](http://bulbapedia.bulbagarden.net/wiki/Pok%C3%A9athlon) for greater detail.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -13100,6 +13648,10 @@ Pokeathlon Stats are different attributes of a Pokémon's performance in Pokéat
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -13141,6 +13693,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -13490,11 +14046,23 @@ https://pokeapi.co/api/v2/nature/1/
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/stat/ [#operation-api_v2_stat_list]
 
 _List stats_
 
 Stats determine certain aspects of battles. Each Pokémon has a value for each stat which grows as they gain levels and can be altered momentarily by effects in battles.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -13547,6 +14115,10 @@ Stats determine certain aspects of battles. Each Pokémon has a value for each s
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -13638,6 +14210,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -13815,11 +14391,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/stat/\{id\}/ [#operation-api_v2_stat_retrieve]
 
 _Get stat_
 
 Stats determine certain aspects of battles. Each Pokémon has a value for each stat which grows as they gain levels and can be altered momentarily by effects in battles.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -13873,6 +14461,10 @@ Stats determine certain aspects of battles. Each Pokémon has a value for each s
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -13914,6 +14506,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -14585,11 +15181,23 @@ https://pokeapi.co/api/v2/move/14/
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/type/ [#operation-api_v2_type_list]
 
 _List types_
 
 Types are properties for Pokémon and their moves. Each type has three properties: which types of Pokémon it is super effective against, which types of Pokémon it is not very effective against, and which types of Pokémon it is completely ineffective against.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -14642,6 +15250,10 @@ Types are properties for Pokémon and their moves. Each type has three propertie
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -14733,6 +15345,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -14910,11 +15526,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/type/\{id\}/ [#operation-api_v2_type_retrieve]
 
 _Get types_
 
 Types are properties for Pokémon and their moves. Each type has three properties: which types of Pokémon it is super effective against, which types of Pokémon it is not very effective against, and which types of Pokémon it is completely ineffective against.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -14968,6 +15596,10 @@ Types are properties for Pokémon and their moves. Each type has three propertie
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -15009,6 +15641,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -17531,3 +18167,7 @@ https://pokeapi.co/api/v2/type/3/
 </SectionContent>
 
 </TabbedSection>
+
+</OperationResponseBodySection>
+
+</Operation>
