--- a/examples/docusaurus/mistral/docs/api/tag/files.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/files.mdx
@@ -4,16 +4,24 @@ sidebar_label: Files
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, TryItNow, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationTryItNowSection, TryItNow, Section, SectionTitle, SectionContent, OperationResponseBodySection, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationRequestBodySection, OperationParametersSection, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Files Operations \{#files\}
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files \{#operation-files_api_routes_list_files\}
 
 _List Files_
 
 Returns a list of files that belong to the user's organization.
+
+</OperationFrontMatterSection>
+
+<OperationTryItNowSection slot="try-it-now">
 
 <Section variant="top-level">
 
@@ -46,6 +54,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -373,6 +385,14 @@ _Example:_
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/files \{#operation-files_api_routes_upload_file\}
 
 _Upload File_
@@ -382,6 +402,10 @@ Upload a file that can be used across various endpoints.
 The size of individual files can be a maximum of 512 MB. The Fine-tuning API only supports .jsonl files.
 
 Please contact us if you need to increase these storage limits.
+
+</OperationFrontMatterSection>
+
+<OperationTryItNowSection slot="try-it-now">
 
 <Section variant="top-level">
 
@@ -417,6 +441,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationRequestBodySection slot="request-body">
 
 <Section variant="top-level">
 
@@ -522,6 +550,10 @@ The File object (not file name) to be uploaded.
 </SectionContent>
 
 </Section>
+
+</OperationRequestBodySection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -770,11 +802,23 @@ _Example:_
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\} \{#operation-files_api_routes_retrieve_file\}
 
 _Retrieve File_
 
 Returns information about a specific file.
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -812,6 +856,10 @@ Returns information about a specific file.
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -845,6 +893,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1111,11 +1163,23 @@ _Example:_
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>DELETE</b></Pill> /v1/files/\{file\_id\} \{#operation-files_api_routes_delete_file\}
 
 _Delete File_
 
 Delete a file.
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -1153,6 +1217,10 @@ Delete a file.
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -1186,6 +1254,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1303,11 +1375,23 @@ file
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\}/content \{#operation-files_api_routes_download_file\}
 
 _Download File_
 
 Download a file
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -1345,6 +1429,10 @@ Download a file
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -1379,6 +1467,10 @@ run();`}
 
 </Section>
 
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
+
 <TabbedSection>
 
 <SectionTitle slot="title" variant="default">
@@ -1409,9 +1501,21 @@ OK
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\}/url \{#operation-files_api_routes_get_signed_url\}
 
 Get Signed Url
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -1473,6 +1577,10 @@ Number of hours before the url becomes invalid. Defaults to 24h
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -1506,6 +1614,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1550,3 +1662,7 @@ OK
 </SectionContent>
 
 </TabbedSection>
+
+</OperationResponseBodySection>
+
+</Operation>
