--- a/examples/docusaurus/pokeapi/docs/api/tag/machines.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/tag/machines.mdx
@@ -4,16 +4,24 @@ sidebar_label: Machines
 ---
 
 import "@speakeasy-api/docs-md/docusaurus.css";
-import { Pill, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationSecuritySection, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, OperationParametersSection, OperationResponseBodySection, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
 
 
 # Machines Operations \{#machines\}
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/machine/ \{#operation-api_v2_machine_list\}
 
 _List machines_
 
 Machines are the representation of items that teach moves to Pokémon. They vary from version to version, so it is not certain that one specific TM or HM corresponds to a single Machine.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -66,6 +74,10 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -157,6 +169,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -315,11 +331,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/machine/\{id\}/ \{#operation-api_v2_machine_retrieve\}
 
 _Get machine_
 
 Machines are the representation of items that teach moves to Pokémon. They vary from version to version, so it is not certain that one specific TM or HM corresponds to a single Machine.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -373,6 +401,10 @@ Machines are the representation of items that teach moves to Pokémon. They vary
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -414,6 +446,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -624,3 +660,7 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </TabbedSection>
+
+</OperationResponseBodySection>
+
+</Operation>
