--- a/examples/nextra/mistral/src/app/api/tag/files/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/files/page.mdx
@@ -3,16 +3,24 @@ sidebarTitle: Files
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill, TryItNow, Section, SectionTitle, SectionContent, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationTryItNowSection, TryItNow, Section, SectionTitle, SectionContent, OperationResponseBodySection, TabbedSection, SectionTab, ExpandableSection, ExpandableProperty, ExpandableBreakout, OperationRequestBodySection, OperationParametersSection, FrontMatterDisplayType } from "@speakeasy-api/docs-md/react";
 
 
 # Files Operations [#files]
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files [#operation-files_api_routes_list_files]
 
 _List Files_
 
 Returns a list of files that belong to the user's organization.
+
+</OperationFrontMatterSection>
+
+<OperationTryItNowSection slot="try-it-now">
 
 <Section variant="top-level">
 
@@ -45,6 +53,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -372,6 +384,14 @@ _Example:_
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>POST</b></Pill> /v1/files [#operation-files_api_routes_upload_file]
 
 _Upload File_
@@ -381,6 +401,10 @@ Upload a file that can be used across various endpoints.
 The size of individual files can be a maximum of 512 MB. The Fine-tuning API only supports .jsonl files.
 
 Please contact us if you need to increase these storage limits.
+
+</OperationFrontMatterSection>
+
+<OperationTryItNowSection slot="try-it-now">
 
 <Section variant="top-level">
 
@@ -416,6 +440,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationRequestBodySection slot="request-body">
 
 <Section variant="top-level">
 
@@ -521,6 +549,10 @@ The File object (not file name) to be uploaded.
 </SectionContent>
 
 </Section>
+
+</OperationRequestBodySection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -769,11 +801,23 @@ _Example:_
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\} [#operation-files_api_routes_retrieve_file]
 
 _Retrieve File_
 
 Returns information about a specific file.
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -811,6 +855,10 @@ Returns information about a specific file.
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -844,6 +892,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1110,11 +1162,23 @@ _Example:_
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>DELETE</b></Pill> /v1/files/\{file\_id\} [#operation-files_api_routes_delete_file]
 
 _Delete File_
 
 Delete a file.
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -1152,6 +1216,10 @@ Delete a file.
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -1185,6 +1253,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1302,11 +1374,23 @@ file
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\}/content [#operation-files_api_routes_download_file]
 
 _Download File_
 
 Download a file
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -1344,6 +1428,10 @@ Download a file
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -1378,6 +1466,10 @@ run();`}
 
 </Section>
 
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
+
 <TabbedSection>
 
 <SectionTitle slot="title" variant="default">
@@ -1408,9 +1500,21 @@ OK
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /v1/files/\{file\_id\}/url [#operation-files_api_routes_get_signed_url]
 
 Get Signed Url
+
+</OperationFrontMatterSection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -1472,6 +1576,10 @@ Number of hours before the url becomes invalid. Defaults to 24h
 
 </Section>
 
+</OperationParametersSection>
+
+<OperationTryItNowSection slot="try-it-now">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -1505,6 +1613,10 @@ run();`}
 </SectionContent>
 
 </Section>
+
+</OperationTryItNowSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1549,3 +1661,7 @@ OK
 </SectionContent>
 
 </TabbedSection>
+
+</OperationResponseBodySection>
+
+</Operation>
