--- a/examples/nextra/pokeapi/src/app/api/tag/location/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/tag/location/page.mdx
@@ -3,16 +3,24 @@ sidebarTitle: Location
 ---
 
 import "@speakeasy-api/docs-md/nextra.css";
-import { Pill, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
+import { Operation, OperationFrontMatterSection, Pill, OperationSecuritySection, Section, SectionTitle, SectionContent, ExpandableSection, ExpandableProperty, OperationParametersSection, OperationResponseBodySection, TabbedSection, SectionTab, ExpandableBreakout } from "@speakeasy-api/docs-md/react";
 
 
 # Location Operations [#location]
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
 
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/location/ [#operation-api_v2_location_list]
 
 _List locations_
 
 Locations that can be visited within the games. Locations make up sizable portions of regions, like cities or routes.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -65,6 +73,10 @@ Locations that can be visited within the games. Locations make up sizable portio
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -156,6 +168,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -333,11 +349,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/location/\{id\}/ [#operation-api_v2_location_retrieve]
 
 _Get location_
 
 Locations that can be visited within the games. Locations make up sizable portions of regions, like cities or routes.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -391,6 +419,10 @@ Locations that can be visited within the games. Locations make up sizable portio
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -432,6 +464,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -841,11 +877,23 @@ This parameter can be a string or an integer.
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/location-area/ [#operation-api_v2_location_area_list]
 
 _List location areas_
 
 Location areas are sections of areas, such as floors in a building or cave. Each area has its own set of possible Pokémon encounters.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -898,6 +946,10 @@ Location areas are sections of areas, such as floors in a building or cave. Each
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -964,6 +1016,10 @@ The initial index from which to return the results.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1141,11 +1197,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/location-area/\{id\}/ [#operation-api_v2_location_area_retrieve]
 
 _Get location area_
 
 Location areas are sections of areas, such as floors in a building or cave. Each area has its own set of possible Pokémon encounters.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -1199,6 +1267,10 @@ Location areas are sections of areas, such as floors in a building or cave. Each
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -1240,6 +1312,10 @@ A unique integer value identifying this location area.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -1893,11 +1969,23 @@ https://pokeapi.co/api/v2/encounter-method/2/
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pal-park-area/ [#operation-api_v2_pal_park_area_list]
 
 _List pal park areas_
 
 Areas used for grouping Pokémon encounters in Pal Park. They're like habitats that are specific to Pal Park.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -1950,6 +2038,10 @@ Areas used for grouping Pokémon encounters in Pal Park. They're like habitats t
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -2041,6 +2133,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -2218,11 +2314,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/pal-park-area/\{id\}/ [#operation-api_v2_pal_park_area_retrieve]
 
 _Get pal park area_
 
 Areas used for grouping Pokémon encounters in Pal Park. They're like habitats that are specific to Pal Park.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -2276,6 +2384,10 @@ Areas used for grouping Pokémon encounters in Pal Park. They're like habitats t
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -2317,6 +2429,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -2657,11 +2773,23 @@ _Example:_
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/region/ [#operation-api_v2_region_list]
 
 _List regions_
 
 A region is an organized area of the Pokémon world. Most often, the main difference between regions is the species of Pokémon that can be encountered within them.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -2714,6 +2842,10 @@ A region is an organized area of the Pokémon world. Most often, the main differ
 </SectionContent>
 
 </Section>
+
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
 
 <Section variant="top-level">
 
@@ -2805,6 +2937,10 @@ Case-insensitive query applied on the `name` property.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -2982,11 +3118,23 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </TabbedSection>
 
+</OperationResponseBodySection>
+
+</Operation>
+
+<Operation>
+
+<OperationFrontMatterSection slot="front-matter">
+
 ## <Pill variant="primary"><b>GET</b></Pill> /api/v2/region/\{id\}/ [#operation-api_v2_region_retrieve]
 
 _Get region_
 
 A region is an organized area of the Pokémon world. Most often, the main difference between regions is the species of Pokémon that can be encountered within them.
+
+</OperationFrontMatterSection>
+
+<OperationSecuritySection slot="security">
 
 <Section variant="top-level">
 
@@ -3040,6 +3188,10 @@ A region is an organized area of the Pokémon world. Most often, the main differ
 
 </Section>
 
+</OperationSecuritySection>
+
+<OperationParametersSection slot="parameters">
+
 <Section variant="top-level">
 
 <SectionTitle slot="title" variant="top-level">
@@ -3081,6 +3233,10 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </Section>
+
+</OperationParametersSection>
+
+<OperationResponseBodySection slot="response-body">
 
 <TabbedSection>
 
@@ -3523,3 +3679,7 @@ This parameter can be a string or an integer.
 </SectionContent>
 
 </TabbedSection>
+
+</OperationResponseBodySection>
+
+</Operation>
